<resources xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <string name="app_name">GPSSample</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_sign_out">"Sign Out"</string>
    <string name="next">"Next"</string>
    <string name="previous">"Previous"</string>
    <string name="manager">"Manager"</string>
    <string name="client">"Enumeration"</string>
    <string name="connected_clients">"Connected Clients"</string>
    <string name="create_hotspot">"Create Hotspot"</string>
    <string name="create_server">"Create Server"</string>
    <string name="create_qr_code">"Create QR Code"</string>
    <string name="connect_hotspot">"Connect To Hotspot"</string>
    <string name="registering_device">"Registering Device"</string>
    <string name="sending_command">"Sending Command"</string>
    <string name="sending_enum_data">"Sending Enumeration Data"</string>
    <string name="receiving_data">"Receiving Data"</string>
    <string name="configuration_received">"Configuration Received"</string>
    <string name="admin">"Admin"</string>
    <string name="supervisor">"Supervisor"</string>
    <string name="enumerator">"Enumerator"</string>
    <string name="surveyor">"Surveyor"</string>
    <string name="configurations">"Configurations"</string>
    <string name="no_configurations">"You don't have any configurations"</string>
    <string name="no_studies">"You don't have any studies for this configuration"</string>
    <string name="data_collector">"Data Collector"</string>
    <string name="scan_qr_code">"Scan QR Code"</string>
    <string name="continue_with_existing_study">"Continue with existing Study"</string>
    <string name="admin_sign_in">"Admin Sign In"</string>
    <string name="supervisor_sign_in">"Supervisor Sign In"</string>
    <string name="data_collector_sign_in">"Data Collector Sign In"</string>
    <string name="admin_sign_up">"Admin Sign Up"</string>
    <string name="supervisor_sign_up">"Supervisor Sign Up"</string>
    <string name="data_collector_sign_up">"Data Collector Sign Up"</string>
    <string name="enter_your_pin">"Enter your PIN"</string>
    <string name="reenter_your_pin">"Re-enter your PIN"</string>
    <string name="back">"Back"</string>
    <string name="cancel">"Cancel"</string>
    <string name="finish">"Finish"</string>
    <string name="save">"Save"</string>
    <string name="done">"Done"</string>
    <string name="select_role">"Select your Role"</string>
    <string name="admin_select_role">"Admin Select Role"</string>
    <string name="supervisor_select_role">"Supervisor Select Role"</string>
    <string name="sign_in">"Sign In"</string>
    <string name="sign_up">"Sign Up"</string>
    <string name="sign_out">"Sign Out"</string>
    <string name="not_registered">"Not registered?  Sign Up!"</string>
    <string name="name">"Name"</string>
    <string name="enter_your_name">"Enter your name"</string>
    <string name="pin">"PIN"</string>
    <string name="forgot_pin_question">"Forgot PIN question"</string>
    <string name="forgot_pin_answer">"Forgot PIN answer"</string>
    <string name="enter_your_answer">"Enter your answer"</string>
    <string name="create_config">"Create Configuration"</string>
    <string name="delete_config">"Delete Configuration"</string>
    <string name="edit_config">"Edit Configuration"</string>
    <string name="create_study">"Create Study"</string>
    <string name="edit_study">"Edit Study"</string>
    <string name="delete_study">"Delete Study"</string>
    <string name="create_field">"Create Field"</string>
    <string name="config_name">"Configuration Name"</string>
    <string name="study_name">"Study Name"</string>
    <string name="field_name">"Field Name"</string>
    <string name="enumeration_fields">"Enumeration Fields"</string>
    <string name="enter_config_name">"Enter Configuration Name"</string>
    <string name="enter_study_name">"Enter Study Name"</string>
    <string name="enter_field_name">"Enter Field Name"</string>
    <string name="preferred_units">"Preferred Units"</string>
    <string name="date_format">"Date Format"</string>
    <string name="time_format">"Time Format"</string>
    <string name="manage_enumerators">"Manage Enumerators"</string>
    <string name="collect_enumerations">"Collect Enumerations"</string>
    <string name="generate_sample">"Generate Sample"</string>
    <string name="collect_samples">"Collect Samples"</string>
    <string name="min_gps_precision">"Desired GPS Precision"</string>
    <string name="enter_min_gps_precision">"Enter Desired GPS Precision"</string>
    <string name="define_enumeration_fields">"Define Enumeration Fields"</string>
    <string name="define_enumeration_area">"Define Enumeration Area"</string>
    <string name="define_sampling_method">"Define Sampling Method"</string>
    <string name="studies">"Studies"</string>
    <string name="barcode_result">"Barcode detected"</string>
    <string name="error_scanner_cancelled">"Code scanner is cancelled."</string>
    <string name="error_camera_permission_not_granted">"Camera permission is not granted."</string>
    <string name="error_app_name_unavailable">"App name is not set."</string>
    <string name="error_default_message">"Failed to scan code:"</string>
    <string name="menu_item_settings">"Settings"</string>
    <string name="change_role">"Change Role"</string>
    <string name="enter_your_user_name">"Enter your User Name"</string>
    <string name="field_type">"Field Type"</string>
    <string name="enter_checkbox_text">"Enter checkbox item text"</string>
    <string name="enter_dropdown_item_text">"Enter dropdown item text"</string>
    <string name="add_another">"ADD ANOTHER"</string>
    <string name="delete_field">"Delete Field"</string>
    <string name="manage_this_study">"Manage this Study"</string>
    <string name="manage_study">"Manage Study"</string>
    <string name="manage_configuration">"Manage Configuration"</string>
    <string name="manage_configurations">"Manage Configurations"</string>
    <string name="generate_qr_code">"Generate QR Code"</string>
    <string name="create_filter">"Create Filter"</string>
    <string name="create_rule">"Create Rule"</string>
    <string name="enter_rule_name">"Enter Rule Name"</string>
    <string name="field">"Field"</string>
    <string name="operator">"Operator"</string>
    <string name="enter_value">"Enter Value"</string>
    <string name="value">"Value"</string>
    <string name="rule">"Rule"</string>
    <string name="connector">"Connector"</string>
    <string name="sampling_method">"Sampling Method"</string>
    <string name="enter_filter_name">"Enter Filter Name"</string>
    <string name="sample_size">"Sample Size"</string>
    <string name="filter_name">"Filter Name"</string>
    <string name="rule_name">"Rule Name"</string>
    <string name="total_sample_size">"Total Sample Size Across All Clusters"</string>
    <string name="manage_studies">"Manage Studies"</string>
    <string name="manage_samples">"Manage Samples"</string>
    <string name="create_sample">"Create Sample"</string>
    <string name="delete_sample">"Delete Sample"</string>
    <string name="manage_supervisors">"Manage Supervisors"</string>
    <string name="home">"Home"</string>
    <string name="manage_enumeration_areas">"Manage Enumeration Areas"</string>
    <string name="please_confirm">"Please Confirm"</string>
    <string name="import_enumeration">"Import Enumeration Data"</string>
    <string name="export_configuration">"Export Configuration"</string>
    <string name="delete_study_message">"Are you sure you want to permanently delete this study?"</string>
    <string name="delete_field_message">"Are you sure you want to permanently delete this field?"</string>
    <string name="delete_rule_message">"Are you sure you want to permanently delete this rule?"</string>
    <string name="delete_team_message">"Are you sure you want to permanently delete this team?"</string>
    <string name="delete_configuration_message">"Are you sure you want to permanently delete this configuration?"</string>
    <string name="delete_household_message">"Are you sure you want to permanently delete this household?"</string>
    <string name="create_field_rule_message">"You must create at least one field before you can create a rule"</string>
    <string name="create_rule_filter_message">"You must create at least one rule before you can create a filter"</string>
    <string name="select_import_method_message">"Select an import method"</string>
    <string name="select_export_message">"Select an export method"</string>
    <string name="clear_selections_message">"Are you sure you want clear all selections?"</string>
    <string name="team_name_message">"You must enter a team name"</string>
    <string name="configuration_documents_message">"The configuration has been saved to the Documents directory."</string>
    <string name="delete_enum_area_message">"Are you sure you want to permanently delete Enumeration Area"</string>
    <string name="no_study_ea">"You do not have a study associated with this EA."</string>
    <string name="filename_export_message">"Enter a file name for the export"</string>
    <string name="select_task">"Select a task"</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="qr_code">"QR Code"</string>
    <string name="file_system">"File System"</string>
    <string name="survey">"Survey"</string>
    <string name="undefined">"Undefined"</string>
    <string name="enter_name">"Please enter a name"</string>
    <string name="desired_gps_position">"Please enter the minimum desired GPS precision"</string>
    <string name="import_configuration">"Import Configuration"</string>
    <string name="select_import_method">"Select an import method"</string>
    <string name="select_configuration">"Select a configuration"</string>
    <string name="home_not_exist">"Home does not exist"</string>
    <string name="reason_incomplete">"Oops! Please select a reason for incomplete"</string>
    <string name="enter_enum_area_name">"Enter the Enumeration Area name"</string>
    <string name="select_enumeration">"Select an Enumeration Area"</string>
    <string name="select_time">"Select Time"</string>
    <string name="select_date">"Select Date"</string>
    <string name="other">"Other"</string>
    <string name="notes">"Notes"</string>
    <string name="reset_pin">"Reset PIN"</string>
    <string name="launch_survey">"Launch Survey"</string>
    <string name="mark_as_incomplete">"Mark as Incomplete"</string>
    <string name="enter_current_pin">"Enter Current Pin"</string>
    <string name="enter_new_pin">"Re-Enter New PIN"</string>
    <string name="re_enter_new_pin">"Re-Enter New PIN"</string>
    <string name="show_enumeration_info">"Show Enumeration Info"</string>
    <string name="about_gpssample">"About GPSSample"</string>
    <string name="privacy_statement">"Privacy Statement"</string>
    <string name="terms_and_conditions">"Terms and Conditions"</string>
    <string name="show_map">"Show Map"</string>
    <string name="end_user_license_agreement">"End User License Agreement"</string>
    <string name="update_boundary">"Update Boundary"</string>
    <string name="select_map_tiles">"Select a map tileset"</string>
    <string name="import_map_tiles">"Import Map Tiles"</string>
    <string name="street_map">"Street Map"</string>
    <string name="satellite_map">"Satellite Map"</string>
    <string name="select_map_engine">"Select Map Engine"</string>
    <string name="duplicate">"Duplicate"</string>
    <string name="outside_boundary">"Outside Boundary"</string>
    <string name="keep_or_exclude_this_location">"Keep or Exclude this location?"</string>
    <string name="keep_this_location">"Keep this location"</string>
    <string name="exclude_this_location">"Exclude this location"</string>
    <string name="reason">"Reason"</string>
</resources>