<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.gtri.gpssample.MainActivity">

    <item
        android:id="@+id/about"
        android:title="@string/about_gpssample"
        app:showAsAction="never"/>

    <item
        android:id="@+id/terms"
        android:title="@string/terms_and_conditions"
        app:showAsAction="never"/>

    <item
        android:id="@+id/privacy"
        android:title="@string/privacy_statement"
        app:showAsAction="never"/>

    <item
        android:id="@+id/eula"
        android:title="@string/end_user_license_agreement"
        app:showAsAction="never"/>

    <item
        android:id="@+id/cache_map_tiles"
        android:title="@string/show_map"
        app:showAsAction="never"/>
</menu>