<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.gtri.gpssample.MainActivity">

    <item
        android:id="@+id/redefine_ea_boundary"
        android:title="@string/update_boundary"
        app:showAsAction="never"/>

    <item
        android:id="@+id/mapbox_streets"
        android:title="Mapbox Streets"
        app:showAsAction="never"/>

    <item
        android:id="@+id/satellite_streets"
        android:title="Satellite Streets"
        app:showAsAction="never"/>

    <item
        android:id="@+id/import_map_tiles"
        android:title="@string/import_map_tiles"
        app:showAsAction="never"/>

    <item
        android:id="@+id/select_map_tiles"
        android:title="@string/select_map_tiles"
        app:showAsAction="never"/>
</menu>