<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/fragment_root_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AdminSelectRole.AdminSelectRoleFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:layout_above="@+id/admin_button"
        android:gravity="center"
        android:text="@string/admin_select_role"
        android:textColor="@color/primary_textcolor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/admin_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_above="@+id/supervisor_button"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/admin" />

    <Button
        android:id="@+id/supervisor_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/supervisor" />

    <Button
        android:id="@+id/data_collector_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_below="@+id/supervisor_button"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/data_collector" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/sign_out" />
</RelativeLayout>