<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/fragment_root_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignInSignUpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_above="@+id/radio_group"
            android:gravity="center"
            android:text="@string/select_role"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/sign_in_button"
            android:orientation="vertical">

            <RadioButton android:id="@+id/admin_button"
                android:text="@string/admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton android:id="@+id/supervisor_button"
                android:text="@string/supervisor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton android:id="@+id/data_collector_button"
                android:text="@string/data_collector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/sign_in_button"
            android:gravity="center"
            android:text="@string/not_registered" />
    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>