<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:background="@color/primary"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/title_text_view"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/info_image_view"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            app:srcCompat="@drawable/info3"/>
    </FrameLayout>

    <TextView
        android:text="@string/keep_or_exclude_this_location"
        android:textColor="@color/primary_textcolor"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:gravity="start|center_vertical"
        android:textAlignment="viewStart"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/keep_button"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textAlignment="viewStart"
            android:text="@string/keep_this_location" />

        <RadioButton
            android:id="@+id/exclude_button"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/exclude_this_location" />
    </RadioGroup>

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/reason_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/reason"
            android:textColor="@color/primary_textcolor"
            android:textSize="17sp"
            android:textStyle="bold"
            android:gravity="start|center_vertical"
            android:textAlignment="viewStart"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/duplicate_button"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textAlignment="viewStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duplicate" />

            <RadioButton
                android:id="@+id/outside_button"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textAlignment="viewStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outside_boundary" />

            <RadioButton
                android:id="@+id/other_button"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textAlignment="viewStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:text="@string/notes"
        android:textColor="@color/primary_textcolor"
        android:textSize="17sp"
        android:textStyle="bold"
        android:gravity="start|center_vertical"
        android:textAlignment="viewStart"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/notes_edit_text"
        android:textAlignment="viewStart"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <Button
            android:id="@+id/cancel_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>