<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateConfigurationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/define_sampling_method"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/back_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/back" />

        <Button
            android:id="@+id/next_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/next" />
    </LinearLayout>
</FrameLayout>